# rapid-fuzzy

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  biome.json  browser.js  codecov.yml  deny.toml  highlight.d.mts  highlight.d.ts  highlight.js  highlight.mjs  index.d.mts  index.d.ts  index.js  index.mjs  lefthook.yml  objects.d.mts  objects.d.ts  objects.js  objects.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  rapid-fuzzy-wasm-bindgen.d.ts  rapid-fuzzy-wasm-bindgen.js  rapid-fuzzy-wasm-bindgen_bg.js  rapid-fuzzy-wasm-bindgen_bg.wasm.d.ts  renovate.json  rust-toolchain.toml  tsconfig.json  vitest.bench.config.mts  vitest.config.mts  vitest.config.ts
.changeset/: README.md  add-case-sensitive-option.md  add-fuzzy-object-index.md  add-indel-normalized-hamming.md  add-positions-field.md  add-search-keys.md  add-search-objects.md  adopt-bit-parallel-levenshtein.md  async-fuzzy-index.md  batch-distance-api.md  bigram-prefilter.md  char-prefilter.md  drop-node-20.md  esm-support.md  fix-esm-subpath-types.md  fix-missing-loader-files.md  fix-token-set-ratio-empty.md  fuzzy-index.md  hamming-distance.md  hamming-typed-array-variants.md  incremental-search.md  index-serialization.md  jaro-rapidfuzz.md  keyed-index-optimize.md  keyed-index-parity.md  keyed-index-validation.md  large-scale-bench.md  many-threshold-params.md  match-positions.md  normalize-search-scores.md  normalize-str-cache.md  object-index-serialize.md  objects-mutation-order-fix.md  partial-ratio-early-termination.md  proptest-distance-search.md  remove-deserialize-unwrap.md  score-cutoff-many.md  score-threshold.md  search-indices-api.md  search-optimization.md  (+8 more)
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml
.github/workflows/: benchmark.yml  ci.yml  codeql.yml  codspeed.yml  playground.yml  release.yml  renovate.yml
__test__/: batch.bench.ts  bench-fixtures.ts  distance.bench.ts  distance.compare.bench.ts  esm-import.mjs  highlight.spec.ts  index.spec.ts  objects.spec.ts  ratio.bench.ts  search.bench.ts  search.compare.bench.ts  similarity.bench.ts  wasm.spec.ts
crates/bench/: Cargo.toml
crates/bench/benches/: distance.rs  search.rs
crates/bench/src/: lib.rs
crates/core/: Cargo.toml
crates/core-lib/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/distance/: mod.rs
crates/core/src/search/: index.rs  keyed_index.rs  keys.rs  mod.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
crates/wasm/src/distance/: mod.rs
crates/wasm/src/search/: index.rs  keyed_index.rs  keys.rs  mod.rs
docs/migration/: from-flexsearch.md  from-fuse-js.md  from-fuzzball.md  from-fuzzysort.md  from-leven.md  from-minisearch.md  from-string-similarity.md  from-ufuzzy.md
e2e/: browser.spec.ts  global.d.ts  index.html  serve.mjs  vite.config.mjs  wasm-bun.test.ts  wasm-deno.test.ts
examples/cdn-usage/: index.html
examples/cloudflare-workers/: package.json  worker.js  wrangler.toml
examples/vitepress-plugin/: SearchBox.vue  package.json  plugin.ts  theme.ts
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/wasm32-wasi/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
playground/: index.html  main.js  package.json  rapid-fuzzy-local.js  style.css  vite.config.js
scripts/: build-wasm-bindgen.js  extract-changelog.js  generate-bench-charts.ts  generate-demo-svg.mjs  optimize-wasm.js  patch-binding.js  sync-cargo-version.js  update-bench-readme.ts
(+7 files in other folders)
