[package]
name = "rapid-fuzzy-bench"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish = false

[dev-dependencies]
criterion = { package = "codspeed-criterion-compat", version = "4.4", default-features = false }
strsim = { workspace = true }
nucleo-matcher = { workspace = true }

[[bench]]
name = "distance"
harness = false

[[bench]]
name = "search"
harness = false
