[package]
name = "rapid-fuzzy"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { workspace = true }
napi-derive = { workspace = true }
strsim = { workspace = true }
nucleo-matcher = { workspace = true }

[build-dependencies]
napi-build = { workspace = true }
