[package]
name = "rapid-fuzzy"
version = "2.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
rapid-fuzzy-core = { path = "../core-lib" }
napi = { workspace = true }
napi-derive = { workspace = true }
strsim = { workspace = true }
rapidfuzz = { workspace = true }
nucleo-matcher = { workspace = true }

[dev-dependencies]
proptest = "1"

[build-dependencies]
napi-build = { workspace = true }
