[package]
name = "rapid-fuzzy-wasm"
version = "1.1.1"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rapid-fuzzy-core = { path = "../core-lib" }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
tsify = { version = "0.5", features = ["js"] }
nucleo-matcher = { workspace = true }
strsim = { workspace = true }
rapidfuzz = { workspace = true }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
